; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_init.c_clear_remote_addrlist.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_init.c_clear_remote_addrlist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.link_socket_addr = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.link_socket_addr*, i32)* @clear_remote_addrlist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_remote_addrlist(%struct.link_socket_addr* %0, i32 %1) #0 {
  %3 = alloca %struct.link_socket_addr*, align 8
  %4 = alloca i32, align 4
  store %struct.link_socket_addr* %0, %struct.link_socket_addr** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.link_socket_addr*, %struct.link_socket_addr** %3, align 8
  %6 = getelementptr inbounds %struct.link_socket_addr, %struct.link_socket_addr* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %9
  %13 = load %struct.link_socket_addr*, %struct.link_socket_addr** %3, align 8
  %14 = getelementptr inbounds %struct.link_socket_addr, %struct.link_socket_addr* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = call i32 @freeaddrinfo(i32* %15)
  br label %17

17:                                               ; preds = %12, %9, %2
  %18 = load %struct.link_socket_addr*, %struct.link_socket_addr** %3, align 8
  %19 = getelementptr inbounds %struct.link_socket_addr, %struct.link_socket_addr* %18, i32 0, i32 1
  store i32* null, i32** %19, align 8
  %20 = load %struct.link_socket_addr*, %struct.link_socket_addr** %3, align 8
  %21 = getelementptr inbounds %struct.link_socket_addr, %struct.link_socket_addr* %20, i32 0, i32 0
  store i32* null, i32** %21, align 8
  ret void
}

declare dso_local i32 @freeaddrinfo(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
